k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: kids-tales
  labels:
    app.kubernetes.io/name: kids-tales
